--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ NODE_ENV=development
 
 # CORS Configuration
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+
+# Email Configuration (Gmail)
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
