--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "drizzle-orm": "^0.44.6",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.11",
     "postgres": "^3.4.7",
     "zod": "^4.1.12"
   },
@@ -49,6 +50,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.6",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
     "cross-env": "^10.1.0",
