feat: add JWT_SECRET example to .env.example for authentication configuration

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ DATABASE_URL=postgresql://neondb_owner:npg_TQlhcI1sddddH6zk@ep-small-brook-abml1
 PORT=3000
 NODE_ENV=development
 
+# Authentication
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-min-32-chars
+
 # CORS Configuration
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
 
