chore: Update example database URL from Neon DB

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 ﻿# Database Configuration
-DATABASE_URL=postgresql://neondb_owner:npg_TQlhcI1sddddH6zk@ep-small-brook-abml17n0-pooler.eu-west-2.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgresql://username:password@localhost:5432/trello_clone
 
 # Server Configuration
 PORT=3000
