--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.44.6",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.11",
     "postgres": "^3.4.7",
