--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "nodemailer": "^7.0.11",
     "postgres": "^3.4.7",
     "zod": "^4.1.12"
@@ -50,6 +51,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^20.10.6",
     "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.15.5",
