--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "drizzle-orm": "^0.44.6",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.11",
