--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.11",
     "postgres": "^3.4.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -57,6 +59,8 @@
     "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.5",
     "jest": "^30.2.0",
